# pettai-agent

./: .env.example  .gitignore  .gitleaks.toml  .prettierrc  ABCI_DEPLOYMENT.md  Dockerfile  Pipfile  README.md  aea-config.yaml  deploy_olas.sh  fsm_specification.yaml  main_abci.py  pyproject.toml  readme.md  service.yaml  simple_fsm_spec.yaml  start.sh
.github/workflows/: common_checks.yaml  release_flow.yaml
agent_key/: ethereum_private_key.txt.example
cron/: main.py  requirements.txt
olas-sdk-starter/: .env.example  .gitignore  Dockerfile  Makefile  Pipfile  README.md  README_PETT_AGENT.md  SECURITY.md  agent_performance.json  build_and_test.sh  check_agent_runner.py  get_pyinstaller_dependencies.py  pyvenv.cfg  requirements.txt  run.py  test_agent.py  test_pet_data_ui.py  tox.ini  typing_extensions_patch.py
olas-sdk-starter/agent/: __init__.py  action_recorder.py  agent_performance.py  daily_action_tracker.py  decision_engine.py  log.txt  nonce_utils.py  olas_interface.py  pett_agent.py  pett_tools.py  pett_websocket_client.py  react_server_manager.py  staking_checkpoint.py  telegram_bot.py
olas-sdk-starter/data/: staking_checkpoint_state.json
olas-sdk-starter/frontend/: .env.backup  README.md  debug-install.sh  package.json  tailwind.config.js
olas-sdk-starter/logs/: daily_action_state.json
olas-sdk-starter/persistent_data/: agent_performance.json
pett_agent/: main.py  pett_websocket_client.py  telegram_bot.py
pett_agent_original_code/: pett_tools.py  register_pett.py  telegram_bot.py
tests/: README.md  __init__.py  conftest.py  run_all_tests.py
(+38 files in other folders)
