[tool.poetry]
name = "pett-agent"
version = "0.1.0"
description = ""
authors = ["Helder Gonçalves <helder@bitsapiens.io>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
langchain-community = "^0.3.16"
langgraph = ">=0.2.66,<0.3.0"
langchain-anthropic = ">=0.3.3,<0.4.0"
tavily-python = ">=0.5.0,<0.6.0"
langgraph-checkpoint-sqlite = ">=2.0.3,<3.0.0"
langchain-openai = ">=0.3.1,<0.4.0"
python-dotenv = ">=1.0.1,<2.0.0"
safe-eth-py = "^7.0.0"
web3 = "^7.8.0"
hexbytes = "^1.3.0"
python-telegram-bot = "^20.7"
websockets = "^12.0"
aiohttp = "^3.9.0"
langchain = { version = ">=0.3.26,<0.4.0", extras = ["openai"] }
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
